fixed spacing and content issues on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -77,4 +77,9 @@
             margin-top: 100px !important;
             text-align: right;
         }
+
+        .member-profile{
+            padding-left: 0;
+            padding-right: 0;
+        }
 }
